SolidSamples_Part2_OCP/app/src/main/java/com/example/solidsamples/bad/java/Circle.java
package com.example.solidsamples.bad.java;

/**
 * Created by pieter.snyman on 11/13/17.
 */

public class Circle {

    private final double radius;

    public Circle(double radius) {
        this.radius = radius;
    }

    public double getRadius() {
        return radius;
    }
}
